--- a/QLNS/QLNS.csproj
+++ b/QLNS/QLNS.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.cs" />
     <Compile Include="FormQLNS.cs">
       <SubType>Form</SubType>
     </Compile>
