--- a/QLNS/QLNS.csproj
+++ b/QLNS/QLNS.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QLNS_LHDBS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_LPNS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLDS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLKH.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Global.cs" />
     <Compile Include="FormQLNS.cs">
       <SubType>Form</SubType>
@@ -91,6 +103,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLNS_QLLPTT.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLNXB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLSach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLTacGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLNS_QLTheLoai.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="FormQLNS.resx">
       <DependentUpon>FormQLNS.cs</DependentUpon>
     </EmbeddedResource>
