--- a/QLNS/App.config
+++ b/QLNS/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QLNS.Properties.Settings.QLNSConnectionString" connectionString="Data Source=DESKTOP-2SM9U8H;Initial Catalog=QLNS;Integrated Security=True"
+        <add name="Myconnectionstring" connectionString="Data Source=DESKTOP-2SM9U8H;Initial Catalog=QLNS;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
